<resources>
    <string name="app_name">Mediseen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pill_tracker">PillTracker</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut nisi a ligula porta fringilla eget vitae tellus. Mauris at nisi sed nisi dictum commodo. Fusce mauris purus, aliquet sit amet suscipit eget, scelerisque quis quam. Proin vulputate, lectus eu molestie accumsan, nunc nunc ornare metus, eu tristique eros sem quis nunc. Nam vitae lorem mi. Nulla vitae tempor dolor. Nulla convallis nisl a mi porttitor a tempor tortor aliquet.</string>

    <string name="viewHistory">VIEW EDIT HISTORY</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="back">BACK</string>

    <string name="backgroundGray">#F4F4F4</string>

    <!--fragment_inventory.xml strings-->
    <string name="noPills">Sorry, there are\ncurrently no items\nin the inventory.\nAdd one now!</string>
    <string name="buttonTextAddPills">ADD PILLS</string>
    <string name="noNotes">Sorry, there are\ncurrently no records\nor notes to display.\nAdd one now!</string>
    <string name="buttonTextAddNotes">ADD NOTES</string>
    <!--fragment_shopping_list.xml strings-->
    <string name="noShoppingList">Sorry, there are\ncurrently no items\nin the shopping list</string>

    <!--Error messages-->
    <string name="fillDetails">Please input all the required details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fisherman">Fisherman\'s boy with a bucket of water goes running each day on the shore,
    looking for tide pools and crannies for fish that were stranded. Sure-handed, he gathered them all, throwing them
    back to the ocean, back to the living once more.</string>
    <string name="title_activity_test_layout">TestLayout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_edit_account_settings">EditAccountSettings</string>


</resources>
