<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addingNotesLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/smalMargin"
        android:paddingTop="@dimen/smalMargin">

        <mediseen.customtextview.TextViewPlus
            style="@style/sourceSansProBlack"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/smalMargin"
            android:gravity="center_vertical"
            android:text="HEALTH HISTORY"
            android:textSize="@dimen/headerTextSize1" />

        <mediseen.customtextview.ButtonPlus
            android:id="@+id/editButton"
            style="@style/shortButtonStyle"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/smalMargin"
            android:text="@string/edit" />

    </LinearLayout>


    <mediseen.customtextview.TextViewPlus
        android:id="@+id/title"
        style="@style/signikaRegular"
        android:paddingLeft="@dimen/smalMargin"
        android:paddingRight="@dimen/smalMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="CHECK-Up"
        android:textSize="25dp" />

    <mediseen.customtextview.TextViewPlus
        style="@style/signikaLight"
        android:text="Monday, February 30, 2016"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/smalMargin"
        android:paddingRight="@dimen/smalMargin"
        android:paddingBottom="@dimen/smalMargin"/>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_weight="1">

        <mediseen.customtextview.TextViewPlus
            android:id="@+id/text"
            android:textSize="@dimen/headerTextSize2"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:paddingLeft="@dimen/smalMargin"
            android:paddingRight="@dimen/smalMargin"
            android:text="@string/lorem_ipsum" />

    </ScrollView>

    <!--<EditText-->
    <!--style="@style/textField"-->
    <!--android:hint="Text"-->
    <!--android:singleLine="false"-->
    <!--android:gravity="top"-->
    <!--android:scrollbars="vertical"/>-->

    <mediseen.customtextview.ButtonPlus
        android:id="@+id/viewHistoryButton"
        style="@style/longButtonStyle"
        android:layout_margin="30dp"
        android:text="@string/viewHistory" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <mediseen.customtextview.ButtonPlus
            android:id="@+id/cancelButton"
            style="@style/shortButtonStyle"
            android:layout_marginBottom="@dimen/smalMargin"
            android:layout_marginRight="@dimen/smallButtonsDistance"
            android:text="@string/cancel" />

        <mediseen.customtextview.ButtonPlus
            android:id="@+id/saveButton"
            style="@style/shortButtonStyle"
            android:layout_marginBottom="@dimen/smalMargin"
            android:layout_marginLeft="@dimen/smallButtonsDistance"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>