<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addingNotesLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center|top"
    android:orientation="vertical">

    <mediseen.customtextview.TextViewPlus
        style="@style/sourceSansProBlack"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/smalMargin"
        android:paddingTop="@dimen/smalMargin"
        android:text="HEALTH HISTORY"
        android:textSize="@dimen/headerTextSize1" />


    <EditText
        android:id="@+id/title"
        style="@style/textField"
        android:layout_marginBottom="@dimen/smalMargin"
        android:hint="Title"
        android:scrollbarStyle="outsideOverlay" />

    <EditText
        android:id="@+id/text"
        style="@style/textField"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:hint="Text"
        android:paddingTop="@dimen/smalMargin"
        android:scrollbars="vertical"
        android:singleLine="false" />

    <mediseen.customtextview.ButtonPlus
        android:id="@+id/viewHistoryButton"
        style="@style/longButtonStyle"
        android:layout_margin="30dp"
        android:text="@string/viewHistory" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <mediseen.customtextview.ButtonPlus
            android:id="@+id/cancelButton"
            style="@style/shortButtonStyle"
            android:layout_marginBottom="@dimen/smalMargin"
            android:layout_marginRight="@dimen/smallButtonsDistance"
            android:text="@string/cancel" />

        <mediseen.customtextview.ButtonPlus
            android:id="@+id/saveButton"
            style="@style/shortButtonStyle"
            android:layout_marginBottom="@dimen/smalMargin"
            android:layout_marginLeft="@dimen/smallButtonsDistance"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>